feat: complete favorite recipe